--- a/index.html
+++ b/index.html
@@ -4,37 +4,86 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&amp;display=swap" rel="stylesheet">
+
+	<link rel="stylesheet" href="styles/styles.css">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+	.attribution { font-size: 11px; text-align: center; }
+	.attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+	<script src="scripts/details_oneonly.js" defer></script>
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+	<main class="card">
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+		<div class="decoration">
+			<picture id="bg-illustration">
+				<source media="(min-aspect-ratio: 1/1)"
+					srcset="images/bg-pattern-desktop.svg">
+				<img src="images/bg-pattern-mobile.svg">
+			</picture>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+			<picture id="woman-online-illustration">
+				<source media="(min-aspect-ratio: 1/1)"
+					srcset="images/illustration-woman-online-desktop.svg">
+				<img src="images/illustration-woman-online-mobile.svg">
+			</picture>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+			<picture id="box_illustration">
+				<source media="(min-aspect-ratio: 1/1)"
+					srcset="images/illustration-box-desktop.svg">
+				<img>
+			</picture>
+		</div>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+		<div id="faq" class="details-oneonly">
+			<h1>FAQ</h1>
+
+			<details>
+			<summary>How many team members can I invite?</summary>
+				<p>
+					You can invite up to 2 additional users on the Free plan. There is no limit on
+					team members for the Premium plan.
+				</p>
+			</details>
+
+			<details>
+				<summary>What is the maximum file upload size?</summary>
+				<p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+			</details>
+
+			<details>
+				<summary>How do I reset my password?</summary>
+				<p>
+					Click “Forgot password” from the login page or “Change password” from your profile page.
+					A reset link will be emailed to you.
+				</p>
+			</details>
+
+			<details>
+				<summary>Can I cancel my subscription?</summary>
+				<p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+			</details>
+
+			<details>
+				<summary>Do you provide additional support?</summary>
+				<p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+			</details>
+		</div>
+	</main>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+	Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+	Coded by <a href="#">Your Name Here</a>.
   </div>
+
 </body>
 </html>
