--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
 
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-	.attribution { font-size: 11px; text-align: center; }
-	.attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-
 	<script src="scripts/details_oneonly.js" defer></script>
 </head>
 <body>
@@ -26,8 +20,7 @@
 
 		<div class="decoration">
 			<picture id="bg-illustration">
-				<source media="(min-aspect-ratio: 1/1)"
-					srcset="images/bg-pattern-desktop.svg">
+				<source media="(min-aspect-ratio: 1/1)">
 				<img src="images/bg-pattern-mobile.svg">
 			</picture>
 
@@ -37,7 +30,7 @@
 				<img src="images/illustration-woman-online-mobile.svg">
 			</picture>
 
-			<picture id="box_illustration">
+			<picture id="box-illustration">
 				<source media="(min-aspect-ratio: 1/1)"
 					srcset="images/illustration-box-desktop.svg">
 				<img>
@@ -80,10 +73,11 @@
 		</div>
 	</main>
 
-  <div class="attribution">
-	Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-	Coded by <a href="#">Your Name Here</a>.
-  </div>
+	<div class="attribution">
+		Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
+        <br>
+		Coded by <a href="https://www.github.com/luizffgv">Luiz Fernando F. G. Valle</a>.
+	</div>
 
 </body>
 </html>
