Added alt attributes to <img> tags

--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
 		<div class="decoration">
 			<picture id="bg-illustration">
 				<source media="(min-aspect-ratio: 1/1)">
-				<img src="images/bg-pattern-mobile.svg">
+				<img src="images/bg-pattern-mobile.svg" alt="Background pattern">
 			</picture>
 
 			<picture id="woman-online-illustration">
 				<source media="(min-aspect-ratio: 1/1)"
 					srcset="images/illustration-woman-online-desktop.svg">
-				<img src="images/illustration-woman-online-mobile.svg">
+				<img src="images/illustration-woman-online-mobile.svg"
+					alt="Minimalistic online woman">
 			</picture>
 
 			<picture id="box-illustration">
 				<source media="(min-aspect-ratio: 1/1)"
 					srcset="images/illustration-box-desktop.svg">
-				<img>
+				<img alt="Floating orange box">
 			</picture>
 		</div>
 
